install auth setup env
